added section for error message on homepage.

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -5,7 +5,9 @@
     <%= form.url_field :long_url, :style => "width:500px; margin:10px 0px;", :required => true %>
     <%= form.submit "SHORTEN"%>  
 <% end %>
+<div id="error_message" style="color:red">
     
+</div>   
 <div id="short_url">
     
 </div>
