--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -6,5 +6,5 @@ padding: 15px; margin-bottom:10px;">
 <div style="font-size:22px;font-weight:700;margin-bottom:3px;"><%= link.long_url %></div>
 <div style="font-size:16px;font-weight:500"><%= link_to "http://localhost:3000/#{link.short_url}", "http://localhost:3000/#{link.short_url}", target: :_blank %></div>
 <div style="margin-top: 20px;">Total clicks: <%= link.no_of_clicks %></div>
-<div>Top countries: </div>
+<div>Top countries: <%=  get_top_countries(link) %> </div>
 </div>
